editor leaks